--- a/app/src/main/res/layout/activity_defeat.xml
+++ b/app/src/main/res/layout/activity_defeat.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Your defeat"
+        android:text="You lost :("
         android:textColor="#3654FA"
         android:textSize="75dp"
         app:layout_constraintBottom_toBottomOf="parent"
