--- a/app/src/main/res/layout/activity_win.xml
+++ b/app/src/main/res/layout/activity_win.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Your victory"
+        android:text="You won :)"
         android:textColor="#F81504"
         android:textSize="75dp"
         app:layout_constraintBottom_toBottomOf="parent"
